<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pawtron_xml.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_orderlist"
        android:name="com.example.pawtron_xml.ui.orders.OrderListFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orderlist" />

    <fragment
        android:id="@+id/navigation_chatlist"
        android:name="com.example.pawtron_xml.ui.chat.ChatListFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chatlist" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pawtron_xml.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>