<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dashboard_head"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingHorizontal="15dp"
                android:background="@drawable/bg_header"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/tv_greeting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:textSize="20sp"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/hi_user" />

                <TextView
                    android:id="@+id/tv_greeting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_hello"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_notif"
                    app:layout_constraintHorizontal_bias="0"
                    android:textSize="20sp"
                    android:textColor="?android:textColorPrimary"
                    tools:text="Bagaimana keadaan sobat kecilmu saat ini? Apakah sehat?" />

                <ImageButton
                    android:id="@+id/btn_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_greeting"
                    app:layout_constraintTop_toTopOf="@id/tv_hello"
                    app:layout_constraintStart_toEndOf="@id/tv_greeting"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/bg_rounded"
                    android:src="@drawable/ic_notifications_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/feature_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/dashboard_head">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/title_feature"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_feat_doc"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:drawableTop="@drawable/ic_doctor"
                            android:maxWidth="100dp"
                            android:text="@string/feature_doctor"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="11sp" />

                        <Button
                            android:id="@+id/btn_feat_vacc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:drawableTop="@drawable/ic_doctor"
                            android:maxWidth="100dp"
                            android:textSize="11sp"
                            android:text="@string/feature_vaccine"
                            android:textColor="?android:textColorPrimary"
                            style="?android:attr/buttonBarButtonStyle" />

                        <Button
                            android:id="@+id/btn_feat_adpot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:drawableTop="@drawable/ic_doctor"
                            android:maxWidth="100dp"
                            android:textSize="11sp"
                            android:text="@string/feature_adopt"
                            android:textColor="?android:textColorPrimary"
                            style="?android:attr/buttonBarButtonStyle" />

                        <Button
                            android:id="@+id/btn_feat_hotel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:drawableTop="@drawable/ic_doctor"
                            android:maxWidth="100dp"
                            android:textSize="11sp"
                            android:text="@string/feature_petcare"
                            android:textColor="?android:textColorPrimary"
                            style="?android:attr/buttonBarButtonStyle" />

                        <Button
                            android:id="@+id/btn_feat_shop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:drawableTop="@drawable/ic_doctor"
                            android:maxWidth="100dp"
                            android:textSize="11sp"
                            android:text="@string/feature_shop"
                            android:textColor="?android:textColorPrimary"
                            style="?android:attr/buttonBarButtonStyle" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/check_doc_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/feature_section">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1f"
                        android:text="@string/doc_recommend"
                        android:padding="10dp"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_blue"
                        android:paddingVertical="5dp"
                        android:paddingHorizontal="7dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="?android:colorAccent"
                        android:text="@string/others"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/card_doctor_item" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/check_doc_section">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1f"
                        android:padding="10dp"
                        android:text="@string/feature_petcare"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_blue"
                        android:paddingVertical="5dp"
                        android:paddingHorizontal="7dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="?android:colorAccent"
                        android:text="@string/others"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/card_merchant_item" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>